--- a/index.html
+++ b/index.html
@@ -155,6 +155,26 @@
                 </div>
             </div>
         </section>
+
+        <section class="friendly-links">
+            <div class="container">
+                <h2>友情链接</h2>
+                <div class="links-wrapper">
+                    <a href="https://m.nunuju.cc" target="_blank" rel="noopener noreferrer" title="努努影视" class="link-item">
+                        <span class="link-name">努努影视-最新版</span>
+                    </a>
+                    <a href="https://nunuju.net" target="_blank" rel="noopener noreferrer" title="努努影院" class="link-item">
+                        <span class="link-name">努努影院-免费在线播放</span>
+                    </a>
+                    <a href="https://nunuju.vip" target="_blank" rel="noopener noreferrer" title="努努剧" class="link-item">
+                        <span class="link-name">努努剧-最新版</span>
+                    </a>
+                </div>
+                <div class="links-apply">
+                    <p>申请友链请<a href="https://nunuju.com/index.php/gbook/index.html">联系我们</a></p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
