--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <span class="btn-icon">🎬</span>
                     立即体验
                 </a>
-                <a  class="github-btn">
+                <a href="https://github.com/nunudy/nunuju-docs/tree/main"  class="github-btn">
                     <span class="btn-icon">⭐</span>
                     Star on GitHub
                 </a>
